# vvz-mcp-terminal

./: .flake8  .gitattributes  .gitignore  projectid  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: _test_term.json  term_server.json.pre_proxy_registration.bak
docs/: .gitignore  PROJECT_RULES.md.draft  metadatastd.md  projectid
mcp_terminal/: __init__.py  cli_sessions_purge.py  code_analysis_watch.py  errors.py  paths.py  repo_venv.py  runtime_context.py  term_config.py  term_server.defaults.json  term_server.py  termgr.py
old_code/: docs_plans_general_G-001-security-boundary_T-002-zero-trust-validation-invariant_README.yaml-fd767729-ef04-42b9-975c-3c3075914c9b  docs_plans_general_G-002-project-registry_T-002-registry-build-and-duplicate-handling_A-001-registry-build_README.yaml-ec9754d5-256d-4c04-ba58-3145a7169143  docs_plans_general_G-002-project-registry_T-003-runtime-resolution-and-path-containment_A-001-runtime-resolution_README.yaml-ed491e49-8601-49f3-9af0-6aebe1ae3407  docs_plans_general_G-003-sandbox-enforcement_T-001-container-mount-model_A-001-mount-spec-and-validation_README.yaml-7930a241-df7d-4e61-9906-2b03d4d32bb6  docs_plans_general_G-003-sandbox-enforcement_T-001-container-mount-model_A-001-mount-spec-and-validation_README.yaml-c2baaf09-5c1e-40d2-b55b-4115f3f627c9  docs_plans_general_G-003-sandbox-enforcement_T-003-network-policy-enforcement_A-001-network-spec-and-validation_README.yaml-b76cbcdb-5924-4b9c-a542-58bc25bc27f7  docs_plans_general_spec.yaml-bbcb86b1-f4db-4214-a8cb-172d34a7429b  index.txt  (+27 more)
tests/: test_docker_hosts.py  (+31 more)
(+221 files in other folders)
